--- a/src/components/Vue_Ong.css
+++ b/src/components/Vue_Ong.css
@@ -2,6 +2,7 @@
     display: flex;
     margin-top: 20px;
     margin-left: 10px;
+    margin-bottom: 10px;
     font-size: 20px;
     justify-content: space-between;
 }
@@ -175,6 +176,36 @@
     margin-bottom: 10px;
     font-size: medium;
 }
+.aller {
+    padding: 5px 25px 5px 25px;
+    border: 1px solid  #0b61c3;
+    border-radius: 20px;
+    transform: translateX(110%);
+    background-color: #0b61c3;
+    color: rgb(246, 246, 246); 
+}
+.aller:hover{
+    color: black;
+    background-color: white;
+    border: 1px solid  #0b61c3;
+}
+.venir{
+    transform: translateX(0px);
+    transition: transform 2s ;
+    color: black;
+}
+@keyframes hover {
+
+    to{
+        padding: 5px 25px 5px 25px;
+        border: 1px solid  #0b61c3;
+        border-radius: 20px;
+        transform: translateX(110%);
+        background-color: #0b61c3;
+        color: rgb(255, 255, 255);
+    }
+}
+ 
 @media (max-width: 870px) {
     .apropo img{
         width: 50%;
