--- a/src/components/Vue_Ong.css
+++ b/src/components/Vue_Ong.css
@@ -194,6 +194,25 @@
     transition: transform 2s ;
     color: black;
 }
+/*animation*/
+
+[class*="invisible"]{
+    opacity: 0;
+    transform: translateX(30px);
+    transform: translateY(10px);
+}
+.visible{
+    opacity: 1;
+    transform: translateX(0);
+    transform: translateY(0);
+    transition: 1s ;
+}
+.invisible1{
+    transition: 1.5s ease-in-out ;
+}
+.invisible2{
+    transition: 1.5s ease-in-out ;
+}
 @keyframes hover {
 
     to{
