--- a/src/components/Vue_Ong.css
+++ b/src/components/Vue_Ong.css
@@ -96,13 +96,13 @@
 .recherche select,.recherche input{
     border-radius: 10px;
 }
+/*pagededon*/
 .faireundon{
     margin-left: auto;
+    display: flex;
     margin-right: auto;
-    width: 50%;
+    width: 70%;
     height: max-content;
-    border: 1px solid black;
-    border-radius: 15px;
     margin-top: 15%;
     margin-bottom: 9%;
 }
@@ -112,28 +112,37 @@
     margin-bottom: 10px;
 }
 .choixdudon{
-    margin: 0;
-    padding: 0;
+    background-color: #f4fafb;
+    padding: 10px;
+    width: 50%;
     display: flex;
     list-style: none;
+    line-height: 1.5;
     align-items: center;
     white-space: nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-.choixdudon li{
+.li{
+    display: flex;
     margin-bottom: 10px;
     font-size: 20px;
+    margin-right: 10px;
+    justify-content: space-around;
     color: rgb(62, 62, 62);
+
+    
 }
 .ongchoisi{
-    display: flex;
-}
-.ongchoisi div{
-    padding: 10px;
+    width: 65%;
 }
 .ongchoisi img{
-    padding: 10px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
+}
+.ongchoisi div{
+    transform: translateY(-24rem);
+    margin-left: 10px;
+    color: aliceblue;
 }
 .underline-on-hover {
     text-decoration: none; /* Supprimez le soulignement par défaut */
@@ -155,6 +164,7 @@
     transition: transform 0.3s ease-in-out; /* Animation de transition pour le soulignement */
 }
 
+
 .underline-on-hover:hover::after {
     transform: scaleX(1); /* Élargit le soulignement au survol */
 }
@@ -166,6 +176,11 @@
     margin-bottom: 10px;
     font-size: medium;
 }
+
+
+
+
+
 .aller {
     padding: 5px 25px 5px 25px;
     border: 1px solid  #0b61c3;
@@ -346,6 +361,7 @@
     height: 50%;
 }
 .imgemondemeuilleur{
+    border-radius: 20px;
     width: 100%;
     height: auto;
 }
