--- a/src/components/cartes/carte.css
+++ b/src/components/cartes/carte.css
@@ -1,29 +1,20 @@
 .carte{
-    width: 350px;
+    width: 400px;
     height: max-content;
     margin-left: 8px;
+    cursor: pointer;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 10px 5px 20px 0px rgb(198, 197, 197);
     
 }
-.cartehover{
-    cursor: pointer;
-    transform: scale(1.1,1.1);
-    transition-duration: 1.5s;
-    transition-timing-function: ease-in-out;
-}
-.cartenohover{
-    transform: scale(1,1);
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
-}
+
 .Nbrededon{
     display: flex;
     margin-top: 20px;
     margin-left: 10px;
     margin-bottom: 10px;
     font-size: 20px;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 /*animation*/
 [class*="invisible"]{
@@ -37,12 +28,7 @@
     transform: translateY(0);
     transition: 2s ;
 }
-.invisible1{
-    transition: 1.5s ease-in-out ;
-}
-.invisible2{
-    transition: 1.5s ease-in-out ;
-}
+
 .info p {
     margin-left: 10px;
     
