--- a/src/components/connection.css
+++ b/src/components/connection.css
@@ -17,7 +17,7 @@
     margin-top: 15%;
     display: grid;
     place-items: center; 
-    
+    border-left: 3px solid black;
 }
 .inscrit{
     margin-left: 65%;
