--- a/src/components/accueil.css
+++ b/src/components/accueil.css
@@ -3,12 +3,12 @@
 .accueil{
     display: flex;
     background-color: black;
-    background-image: url('../../public/IMAGE/back.jpeg');
+    background-image: url('../../public/IMAGE/30122014_travaillerpourlechangement.jpg');
     background-repeat: no-repeat;
     opacity: 1;
     background-blend-mode: luminosity;
     background-size: cover;
-    background-position-y:50%;
+
     height: 700px;
 }
 
@@ -16,7 +16,7 @@
     width: 40%; 
     margin: 10% 15%; 
     padding: 5px; 
-    color: white;
+    color: rgb(103, 103, 103);
 }
 .contenu{
     margin: 10px;
